--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,6 @@
-[package]
-name = "hm-asm"
-version = "0.1.0"
-authors = ["Henrik Boeving <boeving@hm.edu>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-pest = "2.0"
-pest_derive = "2.0"
+[workspace]
+members = [
+    "hm-asm-cli/",
+    "hm-asm-simulator/",
+    "hm-asm-web/"
+]
