--- a/hm-asm-web/Cargo.toml
+++ b/hm-asm-web/Cargo.toml
@@ -3,6 +3,11 @@ name = "hm-asm-web"
 version = "0.1.0"
 authors = ["Henrik Böving <hargonix@gmail.com>"]
 edition = "2018"
+description = "A web frontend for hm-asm-simulator"
+readme = "README.md"
+repository = "https://github.com/hargonix/hm-asm"
+license-file = "../LICENSE"
+keywords = ["asm", "wasm", "hm-asm", "simulator", "assembler"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
